--- a/reports/index.qmd
+++ b/reports/index.qmd
@@ -1,26 +1,42 @@
----
-title: "index"
-format: html
-editor: visual
----
+### Team Porifera
 
-## Quarto
+**Q1**
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+Match the following types of real-world data to their equivalent R type and explain your reasoning.
 
-## Running Code
+-   Real world data: scientific names, the count of plants in a quadrat, whether or not it rained on a sequence of days, and the reaction times of birds to disturbances in seconds
 
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+-   R types: logical, integer, numeric, and character
 
-```{r}
-1 + 1
-```
+**Q2**
 
-You can add options to executable code like this
+Use this code chunk to answer the following questions.
 
 ```{r}
-#| echo: false
-2 * 2
+bird_mass_g <- c(100.1, 99.2, 99.3, NA, 100.0, 101.5, 94.7, 99.2, 108.2)
+bird_mass_narm <- na.omit(bird_mass_g)
+mean_mass <- mean(bird_mass_narm)
+sd_mass <- sd(bird_mass_narm)
+is_outlier <- bird_mass_narm > mean_mass + 1 * sd_mass
+num_outliers <- sum(is_outlier)
+num_outliers
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+-   In plain english, what does this code chunk do?
+
+    -   This code determines how many bird wights are considered outliers when the standard deviation is set to 1.
+
+-   Two of the lines have mistakes that keep the code from doing what it's supposed to. What are the mistakes and how would you fix them?
+
+-   What are the types of `bird_mass_g`, `is_outlier`, and `num_outliers`?
+
+**Q3**
+
+How could you change the first line of code in the following chunk so that `median_count` comes out to `5L`?
+
+```{r}
+quad_counts <- c(2L, 19L, 4L, 5L, 5L, 12L, 0L, 7L)
+valid_quads <- c(1, 2, 3, 5, 7) 2,19,4,5,0 0,2,4,5,19
+quad_counts2 <- quad_counts[valid_quads]
+median_count <- median(quad_counts2)
+```
